OSJ-292 - Mishandling of ProxyRestriction content
https://issues.shibboleth.net/jira/browse/OSJ-292